fix(layout): Prevent content from jumping on page navigation

--- a/css/index.css
+++ b/css/index.css
@@ -13,6 +13,11 @@
   box-sizing: border-box;
 }
 
+/* To prevent header jumping when navigating between home and post page because of vertical scrollbar */
+html {
+  overflow-y: scroll;
+}
+
 html,
 body {
   padding: 0;
